Right-aligned the profile popups Issue #99

--- a/src/styles/popups/ProfileMenu.scss
+++ b/src/styles/popups/ProfileMenu.scss
@@ -15,7 +15,7 @@
 
 .profileMenu-content {
   margin-top: 5.5em;
-  margin-right: 18.4em;
+  margin-right: 3em;
   background-color: $accentDark;
   padding: 20px;
   padding-top: 0px;
